# tetris

./: README.md  index.html
diox-tetris/: Cargo.toml  Dioxus.toml  README.md  index.html
diox-tetris/assets/: style.css
diox-tetris/src/: game.rs  main.rs
docs/: index.html
rusty-tetris/: Cargo.toml  README.md  deno.json
rusty-tetris/crates/tetris-core/: Cargo.toml
rusty-tetris/crates/tetris-core/src/: board.rs  controller.rs  lib.rs  render.rs
rusty-tetris/crates/tetris-scores/: Cargo.toml
rusty-tetris/crates/tetris-scores/src/: lib.rs
rusty-tetris/docs/: index.html
rusty-tetris/frontend/: api.ts  index.html  main.ts
rusty-tetris/pkg/: package.json  tetris_core.d.ts  tetris_core.js  tetris_core_bg.wasm  tetris_core_bg.wasm.d.ts
rusty-tetris/server/: main.ts
server/: deno.json  main.ts
webgl-tetris/: Cargo.toml  README.md  deno.json
webgl-tetris/crates/tetris-core/: Cargo.toml
webgl-tetris/crates/tetris-core/src/: app.rs  controller.rs  game.rs  input.rs  lib.rs  piece.rs  webgl.rs
webgl-tetris/docs/: index.html
webgl-tetris/frontend/: api.ts  index.html  main.ts
webgl-tetris/pkg/: tetris_core.d.ts  tetris_core.js  tetris_core_bg.wasm  tetris_core_bg.wasm.d.ts
webgl-tetris/server/: main.ts
